# vibe-debug

./: .npmignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: tests.yml
src/mcp_debugger/: __init__.py  agent_guidance.py  cli.py  mcp_server.py  session.py
src/vibe_debug/: __init__.py  agent_guidance.py  cli.py  mcp_server.py  session.py
tests/: test_cli.py  test_mcp_server.py  test_session.py
tools/: runtime_proof.py
