[project]
name = "mcp-debugger"
version = "0.1.0"
description = "A debugger MCP server that lets coding agents inspect live runtime state."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "debugger", "debugpy", "dap", "coding-agent", "codex", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "debugpy>=1.8.0",
]

[project.scripts]
mcp-debugger = "mcp_debugger.cli:main"
mcp-debugger-server = "mcp_debugger.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
